yml/k8sGatewayAPI/gw-api/simple-http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: foo
  namespace: banking-app
spec:
  parentRefs:
  - name: prod-web
  rules:
  - backendRefs:
    - name: profile
      port: 8080
